kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: microshop
  labels:
    app: microshop
